finish pass thread control

--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -36,6 +36,7 @@ sidebar:
     deployment: Deployment
     advance_usage: Advance Usage
     handover: Handover
+    trigger_event: Trigger Event
     customization: Customization
     permalinks: Permalinks
     themes: Themes
