--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -22,7 +22,7 @@ sidebar:
     getting_started: Getting Started
     overview: Overview
     setup: Setup Your First Chatbot
-    configuration: Configuration
+    privateReply: Create a Private Reply
     commands: Commands
     migration: Migration
     basic_usage: Basic Usage
