Add "See Who Interact with Your Bot"

--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -23,6 +23,7 @@ sidebar:
     overview: Overview
     setup: Setup Your First Chatbot
     privateReply: Create a Private Reply
+    customers: See Who Interact with Bot
     commands: Commands
     migration: Migration
     basic_usage: Basic Usage
