fix file structure

--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -19,6 +19,10 @@ page:
 
 sidebar:
   index:
+    extension: Extension
+    sending_message: Sending Message
+    security: Security
+    example: Examples
     getting_started: Getting Started
     overview: Overview
     setup: Setup Your First Chatbot
