Jonathan update on 26 Feb

--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -26,20 +26,14 @@ sidebar:
     getting_started: Getting Started
     overview: Overview
     setup: Setup Your First Chatbot
-    privateReply: Create a Private Reply
-    customers: See Who Interact with Bot
-    campaigns: Make a Campaign
+    subscribers: Subscribers
+    campaign: Create Your First Campaign
     commands: Commands
     migration: Migration
     basic_usage: Basic Usage
-    writing: Writing
-    front_matter: Front-matter
-    tag_plugins: Tag Plugins
-    asset_folders: Asset Folders
-    data_files: Data Files
-    server: Server
-    generating: Generating
-    deployment: Deployment
+    private_reply: Private reply to comment
+
+
     advance_usage: Advance Usage
     handover: Handover
     takeover: Takeover
