--- a/themes/navy/languages/en.yml
+++ b/themes/navy/languages/en.yml
@@ -19,6 +19,7 @@ page:
 
 sidebar:
   index:
+    reference: Reference
     list_of_actions: List of Actions
     list_of_events: List of Events
     extension: Extension
